--- a/app/globals.css
+++ b/app/globals.css
@@ -33,8 +33,8 @@ html, body {
 
 
 body {
-  background: url("/gridlines-honey.png") no-repeat center center fixed;
-  background-size: cover;
+  background: url("/gridlines-honey.png")  center center fixed;
+  background-size: contain;
   font-family: var(--font-crimson-pro), sans-serif;
 }
 
