Updated Sub Profile

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
   --saffron: #e8c34a;
   --gold: #e3b726;
   --dark-golden: #a28115;
+  --burnt-field: #7e6510;
 
   --burnt-orange: #BA7425;
   --deep-red: #8f0000;
